--- a/css/style.css
+++ b/css/style.css
@@ -1691,7 +1691,7 @@ a.pagination__item:hover, a.pagination__item:focus {
     width: 100%;
     border-collapse: collapse; }
 .product__table-info th {
-      width: 160px; }
+      /*width: 160px;*/ }
 .product__table-info th,
     .product__table-info td {
       padding: 0.3em; }
